// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BYOC Default parameters 1`] = `
"Resources:
  defaultsecuritygroupE8DEFA55:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RestateBYOC/default/security-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: RestateBYOC/default/security-group
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  defaultsecuritygroupfromRestateBYOCdefaultsecuritygroup87B50E9980804AEED840:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateBYOCdefaultsecuritygroup87B50E99:8080'
      FromPort: 8080
      GroupId:
        'Fn::GetAtt':
          - defaultsecuritygroupE8DEFA55
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - defaultsecuritygroupE8DEFA55
          - GroupId
      ToPort: 8080
  defaultsecuritygroupfromRestateBYOCdefaultsecuritygroup87B50E99907077632CDC:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateBYOCdefaultsecuritygroup87B50E99:9070'
      FromPort: 9070
      GroupId:
        'Fn::GetAtt':
          - defaultsecuritygroupE8DEFA55
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - defaultsecuritygroupE8DEFA55
          - GroupId
      ToPort: 9070
  defaultsecuritygroupfromRestateBYOCdefaultsecuritygroup87B50E9951227EDECDBD:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateBYOCdefaultsecuritygroup87B50E99:5122'
      FromPort: 5122
      GroupId:
        'Fn::GetAtt':
          - defaultsecuritygroupE8DEFA55
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - defaultsecuritygroupE8DEFA55
          - GroupId
      ToPort: 5122
  defaultbucket65304C97:
    Type: 'AWS::S3::Bucket'
    Properties:
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  defaultbucketPolicy7463A49D:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket:
        Ref: defaultbucket65304C97
      PolicyDocument:
        Statement:
          - Action: 's3:*'
            Condition:
              Bool:
                'aws:SecureTransport': 'false'
            Effect: Deny
            Principal:
              AWS: '*'
            Resource:
              - 'Fn::GetAtt':
                  - defaultbucket65304C97
                  - Arn
              - 'Fn::Join':
                  - ''
                  - - 'Fn::GetAtt':
                        - defaultbucket65304C97
                        - Arn
                    - /*
        Version: '2012-10-17'
  defaultcluster07071299:
    Type: 'AWS::ECS::Cluster'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/default/cluster
  defaultcluster55134BC5:
    Type: 'AWS::ECS::ClusterCapacityProviderAssociations'
    Properties:
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT
      Cluster:
        Ref: defaultcluster07071299
      DefaultCapacityProviderStrategy: []
  defaulttaskrole39EA6E04:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
  defaulttaskroleDefaultPolicy2C003450:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 's3:GetObject'
              - 's3:PutObject'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'Fn::GetAtt':
                      - defaultbucket65304C97
                      - Arn
                  - /*
            Sid: ReadWriteBucket
          - Action: 's3:ListBucket'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - defaultbucket65304C97
                - Arn
            Sid: ListBucket
        Version: '2012-10-17'
      PolicyName: defaulttaskroleDefaultPolicy2C003450
      Roles:
        - Ref: defaulttaskrole39EA6E04
  defaultexecutionrole239C15A1:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
  defaultexecutionroleDefaultPolicyB8CC6C01:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - defaultstatelessdefinitionrestateLogGroup49FB832E
                - Arn
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - defaultstatefuldefinitionrestateLogGroup3CA44D5E
                - Arn
        Version: '2012-10-17'
      PolicyName: defaultexecutionroleDefaultPolicyB8CC6C01
      Roles:
        - Ref: defaultexecutionrole239C15A1
  defaultstatelessdefinitionDCB0B7C0:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Cpu: 16384
          Environment:
            - Name: RESTATE_LOG_FORMAT
              Value: json
            - Name: RESTATE_ROLES
              Value: '["admin","http-ingress"]'
            - Name: RESTATE_AUTO_PROVISION
              Value: 'true'
            - Name: RESTATE_SHUTDOWN_TIMEOUT
              Value: 100s
            - Name: RESTATE_DEFAULT_NUM_PARTITIONS
              Value: '128'
            - Name: RESTATE_METADATA_CLIENT__TYPE
              Value: object-store
            - Name: RESTATE_METADATA_CLIENT__PATH
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: defaultbucket65304C97
                    - /metadata
            - Name: RESTATE_BIFROST__DEFAULT_PROVIDER
              Value: replicated
            - Name: RESTATE_BIFROST__REPLICATED_LOGLET__DEFAULT_LOG_REPLICATION
              Value: '{zone: 2}'
            - Name: RESTATE_ADMIN__DEFAULT_PARTITION_REPLICATION__LIMIT
              Value: '{node: 2}'
            - Name: >-
                RESTATE_INGRESS__EXPERIMENTAL_FEATURE_ENABLE_SEPARATE_INGRESS_ROLE
              Value: 'true'
            - Name: RESTATE_WORKER__SNAPSHOTS__DESTINATION
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: defaultbucket65304C97
                    - /snapshots
          Essential: true
          HealthCheck:
            Command:
              - CMD
              - curl
              - '--fail'
              - 'http://127.0.0.1:8080/restate/health'
            Interval: 30
            Retries: 3
            Timeout: 5
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: defaultstatelessdefinitionrestateLogGroup49FB832E
              awslogs-stream-prefix: restate
              awslogs-region: region
          Memory: 32768
          Name: restate
          PortMappings:
            - ContainerPort: 8080
              Name: ingress
              Protocol: tcp
            - ContainerPort: 9070
              Name: admin
              Protocol: tcp
            - ContainerPort: 5122
              Name: node
              Protocol: tcp
          StopTimeout: 120
      Cpu: '16384'
      ExecutionRoleArn:
        'Fn::GetAtt':
          - defaultexecutionrole239C15A1
          - Arn
      Family: RestateBYOCdefaultstatelessdefinitionFF58C79A
      Memory: '32768'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: RestateBYOC/default/stateless-definition
      TaskRoleArn:
        'Fn::GetAtt':
          - defaulttaskrole39EA6E04
          - Arn
  defaultstatelessdefinitionrestateLogGroup49FB832E:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/default/stateless-definition
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  defaultstatelessserviceService8A7FABFB:
    Type: 'AWS::ECS::Service'
    Properties:
      CapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
      Cluster:
        Ref: defaultcluster07071299
      DeploymentConfiguration:
        Alarms:
          AlarmNames: []
          Enable: false
          Rollback: false
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DesiredCount: 3
      EnableECSManagedTags: false
      EnableExecuteCommand: false
      HealthCheckGracePeriodSeconds: 60
      LoadBalancers:
        - ContainerName: restate
          ContainerPort: 8080
          TargetGroupArn:
            Ref: defaultingresstargetDADD278C
        - ContainerName: restate
          ContainerPort: 9070
          TargetGroupArn:
            Ref: defaultadmintarget7DDFAC97
        - ContainerName: restate
          ContainerPort: 5122
          TargetGroupArn:
            Ref: defaultnodetarget96D0F643
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - 'Fn::GetAtt':
                - defaultsecuritygroupE8DEFA55
                - GroupId
          Subnets:
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
      PropagateTags: SERVICE
      Tags:
        - Key: Name
          Value: RestateBYOC/default/stateless-service
      TaskDefinition:
        Ref: defaultstatelessdefinitionDCB0B7C0
    DependsOn:
      - defaultnlbadminlistenerB272EE23
      - defaultnlbingresslistenerBF2A8AE1
      - defaultnlbnodelistener6893AA62
      - defaulttaskroleDefaultPolicy2C003450
      - defaulttaskrole39EA6E04
  defaultnlbAE3530CD:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: 'false'
        - Key: load_balancing.cross_zone.enabled
          Value: 'false'
        - Key: dns_record.client_routing_policy
          Value: availability_zone_affinity
      Scheme: internal
      SecurityGroups:
        - 'Fn::GetAtt':
            - defaultsecuritygroupE8DEFA55
            - GroupId
      Subnets:
        - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
        - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
        - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
      Tags:
        - Key: Name
          Value: RestateBYOC/default/nlb
      Type: network
  defaultnlbingresslistenerBF2A8AE1:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: defaultingresstargetDADD278C
          Type: forward
      LoadBalancerArn:
        Ref: defaultnlbAE3530CD
      Port: 8080
      Protocol: TCP
  defaultnlbadminlistenerB272EE23:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: defaultadmintarget7DDFAC97
          Type: forward
      LoadBalancerArn:
        Ref: defaultnlbAE3530CD
      Port: 9070
      Protocol: TCP
  defaultnlbnodelistener6893AA62:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: defaultnodetarget96D0F643
          Type: forward
      LoadBalancerArn:
        Ref: defaultnlbAE3530CD
      Port: 5122
      Protocol: TCP
  defaultingresstargetDADD278C:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /restate/health
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 2
      Port: 8080
      Protocol: TCP
      Tags:
        - Key: Name
          Value: RestateBYOC/default/ingress-target
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '10'
      TargetType: ip
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  defaultadmintarget7DDFAC97:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /health
      HealthCheckPort: '9070'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 2
      Port: 9070
      Protocol: TCP
      Tags:
        - Key: Name
          Value: RestateBYOC/default/admin-target
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '10'
      TargetType: ip
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  defaultnodetarget96D0F643:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /health
      HealthCheckPort: '5122'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 2
      Name: restate-bluegreen-node
      Port: 5122
      Protocol: TCP
      Tags:
        - Key: Name
          Value: RestateBYOC/default/node-target
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '10'
      TargetType: ip
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  defaultstatefuldefinition4CD55F35:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Cpu: 16384
          Environment:
            - Name: RESTATE_LOG_FORMAT
              Value: json
            - Name: RESTATE_ROLES
              Value: '["log-server", "worker", "http-ingress"]'
            - Name: RESTATE_AUTO_PROVISION
              Value: 'false'
            - Name: RESTATE_SHUTDOWN_TIMEOUT
              Value: 100s
            - Name: RESTATE_ROCKSDB_TOTAL_MEMORY_SIZE
              Value: 24576MiB
            - Name: RESTATE_METADATA_CLIENT__TYPE
              Value: object-store
            - Name: RESTATE_METADATA_CLIENT__PATH
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: defaultbucket65304C97
                    - /metadata
            - Name: RESTATE_WORKER__SNAPSHOTS__DESTINATION
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: defaultbucket65304C97
                    - /snapshots
            - Name: RESTATE_WORKER__SNAPSHOTS__SNAPSHOT_INTERVAL_NUM_RECORDS
              Value: '1000000'
            - Name: RESTATE_WORKER__STORAGE__ROCKSDB_DISABLE_DIRECT_IO_FOR_READS
              Value: 'true'
            - Name: RESTATE_WORKER__STORAGE__ROCKSDB_DISABLE_WAL_FSYNC
              Value: 'true'
            - Name: RESTATE_LOG_SERVER__ROCKSDB_DISABLE_WAL_FSYNC
              Value: 'true'
            - Name: RESTATE_LOG_SERVER__ROCKSDB_DISABLE_DIRECT_IO_FOR_READS
              Value: 'true'
            - Name: >-
                RESTATE_INGRESS__EXPERIMENTAL_FEATURE_ENABLE_SEPARATE_INGRESS_ROLE
              Value: 'true'
          Essential: true
          HealthCheck:
            Command:
              - CMD
              - curl
              - '--fail'
              - 'http://127.0.0.1:5122/health'
            Interval: 30
            Retries: 3
            Timeout: 5
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: defaultstatefuldefinitionrestateLogGroup3CA44D5E
              awslogs-stream-prefix: restate
              awslogs-region: region
          Memory: 32768
          MountPoints:
            - ContainerPath: /restate-data
              ReadOnly: false
              SourceVolume: restate-data
          Name: restate
          PortMappings:
            - ContainerPort: 5122
              Name: node
              Protocol: tcp
          RestartPolicy:
            Enabled: true
            RestartAttemptPeriod: 60
          StopTimeout: 120
      Cpu: '16384'
      EphemeralStorage:
        SizeInGiB: 200
      ExecutionRoleArn:
        'Fn::GetAtt':
          - defaultexecutionrole239C15A1
          - Arn
      Family: RestateBYOCdefaultstatefuldefinition4D62F21B
      Memory: '32768'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: RestateBYOC/default/stateful-definition
      TaskRoleArn:
        'Fn::GetAtt':
          - defaulttaskrole39EA6E04
          - Arn
      Volumes:
        - Name: restate-data
  defaultstatefuldefinitionrestateLogGroup3CA44D5E:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/default/stateful-definition
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  defaultcontrollerdefinitionTaskRoleB580A23C:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
      Tags:
        - Key: Name
          Value: RestateBYOC/default/controller-definition
  defaultcontrollerdefinitionTaskRoleDefaultPolicy387DF178:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ecs:ListTasks'
              - 'ecs:DescribeTasks'
              - 'ecs:StopTask'
            Condition:
              ArnEquals:
                'ecs:cluster':
                  'Fn::GetAtt':
                    - defaultcluster07071299
                    - Arn
            Effect: Allow
            Resource: '*'
            Sid: TaskActions
          - Action: 'ecs:RunTask'
            Condition:
              ArnEquals:
                'ecs:cluster':
                  'Fn::GetAtt':
                    - defaultcluster07071299
                    - Arn
              ArnLike:
                'ecs:task-definition':
                  'Fn::Join':
                    - ''
                    - - 'Fn::Join':
                          - ':'
                          - - 'Fn::Select':
                                - 0
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: defaultstatefuldefinition4CD55F35
                            - 'Fn::Select':
                                - 1
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: defaultstatefuldefinition4CD55F35
                            - 'Fn::Select':
                                - 2
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: defaultstatefuldefinition4CD55F35
                            - 'Fn::Select':
                                - 3
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: defaultstatefuldefinition4CD55F35
                            - 'Fn::Select':
                                - 4
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: defaultstatefuldefinition4CD55F35
                            - 'Fn::Select':
                                - 5
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: defaultstatefuldefinition4CD55F35
                      - ':*'
            Effect: Allow
            Resource: '*'
            Sid: RunTask
          - Action: 'iam:PassRole'
            Condition:
              StringEquals:
                'iam:PassedToService': ecs-tasks.amazonaws.com
            Effect: Allow
            Resource:
              - 'Fn::GetAtt':
                  - defaulttaskrole39EA6E04
                  - Arn
              - 'Fn::GetAtt':
                  - defaultexecutionrole239C15A1
                  - Arn
            Sid: RunTaskPassRole
          - Action:
              - 's3:GetObject'
              - 's3:PutObject'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'Fn::GetAtt':
                      - defaultbucket65304C97
                      - Arn
                  - /*
            Sid: ReadWriteBucket
          - Action: 's3:ListBucket'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - defaultbucket65304C97
                - Arn
            Sid: ListBucket
        Version: '2012-10-17'
      PolicyName: defaultcontrollerdefinitionTaskRoleDefaultPolicy387DF178
      Roles:
        - Ref: defaultcontrollerdefinitionTaskRoleB580A23C
  defaultcontrollerdefinition66AD165F:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Cpu: 1024
          Environment:
            - Name: RUST_LOG
              Value: 'info,restate_fargate_controller=debug'
            - Name: CONTROLLER_LOG_FORMAT
              Value: json
            - Name: CONTROLLER_METADATA_PATH
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: defaultbucket65304C97
                    - /metadata
            - Name: CONTROLLER_RECONCILE_INTERVAL
              Value: 10s
            - Name: CONTROLLER_CLUSTER__CLUSTER_ARN
              Value:
                'Fn::GetAtt':
                  - defaultcluster07071299
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __REGION
              Value:
                Ref: 'AWS::Region'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __CLUSTER_ARN
              Value:
                'Fn::GetAtt':
                  - defaultcluster07071299
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __TASK_PREFIX
              Value:
                'Fn::Join':
                  - /
                  - - 'Fn::Join':
                        - ':'
                        - - 'Fn::Select':
                              - 0
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - defaultcluster07071299
                                              - Arn
                          - 'Fn::Select':
                              - 1
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - defaultcluster07071299
                                              - Arn
                          - 'Fn::Select':
                              - 2
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - defaultcluster07071299
                                              - Arn
                          - 'Fn::Select':
                              - 3
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - defaultcluster07071299
                                              - Arn
                          - 'Fn::Select':
                              - 4
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - defaultcluster07071299
                                              - Arn
                          - task
                    - 'Fn::Select':
                        - 1
                        - 'Fn::Split':
                            - /
                            - 'Fn::GetAtt':
                                - defaultcluster07071299
                                - Arn
                    - ''
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__ENABLE_EXECUTE_COMMAND
              Value: 'false'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__SECURITY_GROUPS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::GetAtt':
                        - defaultsecuritygroupE8DEFA55
                        - GroupId
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__SUBNETS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::ImportValue': >-
                        VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__TASK_DEFINITION_ARN
              Value:
                Ref: defaultstatefuldefinition4CD55F35
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__ENABLE_EXECUTE_COMMAND
              Value: 'false'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__SECURITY_GROUPS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::GetAtt':
                        - defaultsecuritygroupE8DEFA55
                        - GroupId
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__SUBNETS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::ImportValue': >-
                        VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__TASK_DEFINITION_ARN
              Value:
                Ref: defaultstatefuldefinition4CD55F35
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__ENABLE_EXECUTE_COMMAND
              Value: 'false'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__SECURITY_GROUPS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::GetAtt':
                        - defaultsecuritygroupE8DEFA55
                        - GroupId
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__SUBNETS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::ImportValue': >-
                        VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__TASK_DEFINITION_ARN
              Value:
                Ref: defaultstatefuldefinition4CD55F35
          Essential: true
          HealthCheck:
            Command:
              - CMD
              - curl
              - '--fail'
              - 'http://127.0.0.1:8080/health'
            Interval: 30
            Retries: 10
            StartPeriod: 300
            Timeout: 5
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: defaultcontrollerdefinitioncontrollerLogGroup60752F65
              awslogs-stream-prefix: controller
              awslogs-region: region
          Memory: 2048
          Name: controller
          StopTimeout: 120
      Cpu: '1024'
      ExecutionRoleArn:
        'Fn::GetAtt':
          - defaultcontrollerdefinitionExecutionRoleD4FBD64B
          - Arn
      Family: RestateBYOCdefaultcontrollerdefinition426584A5
      Memory: '2048'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: RestateBYOC/default/controller-definition
      TaskRoleArn:
        'Fn::GetAtt':
          - defaultcontrollerdefinitionTaskRoleB580A23C
          - Arn
  defaultcontrollerdefinitioncontrollerLogGroup60752F65:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/default/controller-definition
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  defaultcontrollerdefinitionExecutionRoleD4FBD64B:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
      Tags:
        - Key: Name
          Value: RestateBYOC/default/controller-definition
  defaultcontrollerdefinitionExecutionRoleDefaultPolicy9D0A0573:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ecr:BatchCheckLayerAvailability'
              - 'ecr:GetDownloadUrlForLayer'
              - 'ecr:BatchGetImage'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'arn:'
                  - Ref: 'AWS::Partition'
                  - >-
                    :ecr:region:account-id:repository/cdk-hnb659fds-container-assets-account-id-region
          - Action: 'ecr:GetAuthorizationToken'
            Effect: Allow
            Resource: '*'
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - defaultcontrollerdefinitioncontrollerLogGroup60752F65
                - Arn
        Version: '2012-10-17'
      PolicyName: defaultcontrollerdefinitionExecutionRoleDefaultPolicy9D0A0573
      Roles:
        - Ref: defaultcontrollerdefinitionExecutionRoleD4FBD64B
  defaultcontrollerserviceService18139D09:
    Type: 'AWS::ECS::Service'
    Properties:
      CapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
      Cluster:
        Ref: defaultcluster07071299
      DeploymentConfiguration:
        Alarms:
          AlarmNames: []
          Enable: false
          Rollback: false
        MaximumPercent: 100
        MinimumHealthyPercent: 0
      DesiredCount: 1
      EnableECSManagedTags: false
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - 'Fn::GetAtt':
                - defaultsecuritygroupE8DEFA55
                - GroupId
          Subnets:
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
      Tags:
        - Key: Name
          Value: RestateBYOC/default/controller-service
      TaskDefinition:
        Ref: defaultcontrollerdefinition66AD165F
    DependsOn:
      - defaultcontrollerdefinitionTaskRoleDefaultPolicy387DF178
      - defaultcontrollerdefinitionTaskRoleB580A23C
  defaultrestatectllambdaServiceRoleA08794D1:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole'
      Tags:
        - Key: Name
          Value: RestateBYOC/default/restatectl-lambda
  defaultrestatectllambda05E7B262:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Environment:
        Variables:
          RESTATECTL_ADDRESS:
            'Fn::Join':
              - ''
              - - 'http://'
                - 'Fn::GetAtt':
                    - defaultnlbAE3530CD
                    - DNSName
                - ':5122'
      Handler: restatectl
      Role:
        'Fn::GetAtt':
          - defaultrestatectllambdaServiceRoleA08794D1
          - Arn
      Runtime: provided.al2023
      Tags:
        - Key: Name
          Value: RestateBYOC/default/restatectl-lambda
      Timeout: 10
      VpcConfig:
        SecurityGroupIds:
          - 'Fn::GetAtt':
              - defaultsecuritygroupE8DEFA55
              - GroupId
        SubnetIds:
          - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
          - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
          - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
    DependsOn:
      - defaultrestatectllambdaServiceRoleA08794D1
  retirementwatcherlambdaServiceRoleE4E2E3CB:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-lambda
  retirementwatcherlambdaServiceRoleDefaultPolicyDB1E9C90:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ecs:DescribeClusters'
              - 'ecs:TagResource'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - defaultcluster07071299
                - Arn
            Sid: ClusterActions
          - Action:
              - 'sqs:ReceiveMessage'
              - 'sqs:ChangeMessageVisibility'
              - 'sqs:GetQueueUrl'
              - 'sqs:DeleteMessage'
              - 'sqs:GetQueueAttributes'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - retirementwatcherqueueBAD18BB8
                - Arn
        Version: '2012-10-17'
      PolicyName: retirementwatcherlambdaServiceRoleDefaultPolicyDB1E9C90
      Roles:
        - Ref: retirementwatcherlambdaServiceRoleE4E2E3CB
  retirementwatcherlambda6732274F:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Environment:
        Variables:
          CLUSTER_ARN:
            'Fn::GetAtt':
              - defaultcluster07071299
              - Arn
          NODE_OPTIONS: '--experimental-strip-types'
      Handler: index.handler
      Role:
        'Fn::GetAtt':
          - retirementwatcherlambdaServiceRoleE4E2E3CB
          - Arn
      Runtime: nodejs22.x
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-lambda
      Timeout: 60
    DependsOn:
      - retirementwatcherlambdaServiceRoleDefaultPolicyDB1E9C90
      - retirementwatcherlambdaServiceRoleE4E2E3CB
  retirementwatcherlambdaSqsEventSourceRestateBYOCretirementwatcherqueueC0B122FB68CBA159:
    Type: 'AWS::Lambda::EventSourceMapping'
    Properties:
      BatchSize: 1
      EventSourceArn:
        'Fn::GetAtt':
          - retirementwatcherqueueBAD18BB8
          - Arn
      FunctionName:
        Ref: retirementwatcherlambda6732274F
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-lambda
  retirementwatcherqueueBAD18BB8:
    Type: 'AWS::SQS::Queue'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-queue
      VisibilityTimeout: 60
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  retirementwatcherqueuePolicy5522DE00:
    Type: 'AWS::SQS::QueuePolicy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'sqs:SendMessage'
              - 'sqs:GetQueueAttributes'
              - 'sqs:GetQueueUrl'
            Condition:
              ArnEquals:
                'aws:SourceArn':
                  'Fn::GetAtt':
                    - retirementwatcherrule0D8877EE
                    - Arn
            Effect: Allow
            Principal:
              Service: events.amazonaws.com
            Resource:
              'Fn::GetAtt':
                - retirementwatcherqueueBAD18BB8
                - Arn
        Version: '2012-10-17'
      Queues:
        - Ref: retirementwatcherqueueBAD18BB8
  retirementwatcherrule0D8877EE:
    Type: 'AWS::Events::Rule'
    Properties:
      EventPattern:
        detail:
          eventTypeCode:
            - equals-ignore-case: AWS_ECS_TASK_PATCHING_RETIREMENT
          service:
            - equals-ignore-case: ecs
        resources:
          - prefix:
              'Fn::Join':
                - /
                - - 'Fn::Join':
                      - ':'
                      - - 'Fn::Select':
                            - 0
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - defaultcluster07071299
                                            - Arn
                        - 'Fn::Select':
                            - 1
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - defaultcluster07071299
                                            - Arn
                        - 'Fn::Select':
                            - 2
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - defaultcluster07071299
                                            - Arn
                        - 'Fn::Select':
                            - 3
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - defaultcluster07071299
                                            - Arn
                        - 'Fn::Select':
                            - 4
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - defaultcluster07071299
                                            - Arn
                        - task
                  - 'Fn::Select':
                      - 1
                      - 'Fn::Split':
                          - /
                          - 'Fn::GetAtt':
                              - defaultcluster07071299
                              - Arn
                  - ''
        detail-type:
          - equals-ignore-case: AWS Health Event
      State: ENABLED
      Targets:
        - Arn:
            'Fn::GetAtt':
              - retirementwatcherqueueBAD18BB8
              - Arn
          Id: Target0
"
`;

exports[`BYOC With volume 1`] = `
"Resources:
  withvolumesecuritygroup6DBAA33E:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RestateBYOC/with-volume/security-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/security-group
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  withvolumesecuritygroupfromRestateBYOCwithvolumesecuritygroup543DDD29808082ABCD3E:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateBYOCwithvolumesecuritygroup543DDD29:8080'
      FromPort: 8080
      GroupId:
        'Fn::GetAtt':
          - withvolumesecuritygroup6DBAA33E
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - withvolumesecuritygroup6DBAA33E
          - GroupId
      ToPort: 8080
  withvolumesecuritygroupfromRestateBYOCwithvolumesecuritygroup543DDD2990705962AE02:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateBYOCwithvolumesecuritygroup543DDD29:9070'
      FromPort: 9070
      GroupId:
        'Fn::GetAtt':
          - withvolumesecuritygroup6DBAA33E
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - withvolumesecuritygroup6DBAA33E
          - GroupId
      ToPort: 9070
  withvolumesecuritygroupfromRestateBYOCwithvolumesecuritygroup543DDD2951222D7DB9AB:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: 'from RestateBYOCwithvolumesecuritygroup543DDD29:5122'
      FromPort: 5122
      GroupId:
        'Fn::GetAtt':
          - withvolumesecuritygroup6DBAA33E
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - withvolumesecuritygroup6DBAA33E
          - GroupId
      ToPort: 5122
  withvolumebucketE6C6250B:
    Type: 'AWS::S3::Bucket'
    Properties:
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  withvolumebucketPolicyCEE43EA3:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket:
        Ref: withvolumebucketE6C6250B
      PolicyDocument:
        Statement:
          - Action: 's3:*'
            Condition:
              Bool:
                'aws:SecureTransport': 'false'
            Effect: Deny
            Principal:
              AWS: '*'
            Resource:
              - 'Fn::GetAtt':
                  - withvolumebucketE6C6250B
                  - Arn
              - 'Fn::Join':
                  - ''
                  - - 'Fn::GetAtt':
                        - withvolumebucketE6C6250B
                        - Arn
                    - /*
        Version: '2012-10-17'
  withvolumecluster05BAFA05:
    Type: 'AWS::ECS::Cluster'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/cluster
  withvolumecluster222E14DA:
    Type: 'AWS::ECS::ClusterCapacityProviderAssociations'
    Properties:
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT
      Cluster:
        Ref: withvolumecluster05BAFA05
      DefaultCapacityProviderStrategy: []
  withvolumetaskrole261905B6:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
  withvolumetaskroleDefaultPolicyCC3F2AA1:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 's3:GetObject'
              - 's3:PutObject'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'Fn::GetAtt':
                      - withvolumebucketE6C6250B
                      - Arn
                  - /*
            Sid: ReadWriteBucket
          - Action: 's3:ListBucket'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumebucketE6C6250B
                - Arn
            Sid: ListBucket
        Version: '2012-10-17'
      PolicyName: withvolumetaskroleDefaultPolicyCC3F2AA1
      Roles:
        - Ref: withvolumetaskrole261905B6
  withvolumeexecutionrole3E3B4648:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
  withvolumeexecutionroleDefaultPolicyC4D3F6D5:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumestatelessdefinitionrestateLogGroup9C462383
                - Arn
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumestatefuldefinitionrestateLogGroupD4893BD3
                - Arn
        Version: '2012-10-17'
      PolicyName: withvolumeexecutionroleDefaultPolicyC4D3F6D5
      Roles:
        - Ref: withvolumeexecutionrole3E3B4648
  withvolumestatelessdefinition6EEBEF17:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Cpu: 16384
          Environment:
            - Name: RESTATE_LOG_FORMAT
              Value: json
            - Name: RESTATE_ROLES
              Value: '["admin","http-ingress"]'
            - Name: RESTATE_AUTO_PROVISION
              Value: 'true'
            - Name: RESTATE_SHUTDOWN_TIMEOUT
              Value: 100s
            - Name: RESTATE_DEFAULT_NUM_PARTITIONS
              Value: '128'
            - Name: RESTATE_METADATA_CLIENT__TYPE
              Value: object-store
            - Name: RESTATE_METADATA_CLIENT__PATH
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: withvolumebucketE6C6250B
                    - /metadata
            - Name: RESTATE_BIFROST__DEFAULT_PROVIDER
              Value: replicated
            - Name: RESTATE_BIFROST__REPLICATED_LOGLET__DEFAULT_LOG_REPLICATION
              Value: '{zone: 2}'
            - Name: RESTATE_ADMIN__DEFAULT_PARTITION_REPLICATION__LIMIT
              Value: '{node: 2}'
            - Name: >-
                RESTATE_INGRESS__EXPERIMENTAL_FEATURE_ENABLE_SEPARATE_INGRESS_ROLE
              Value: 'true'
            - Name: RESTATE_WORKER__SNAPSHOTS__DESTINATION
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: withvolumebucketE6C6250B
                    - /snapshots
          Essential: true
          HealthCheck:
            Command:
              - CMD
              - curl
              - '--fail'
              - 'http://127.0.0.1:8080/restate/health'
            Interval: 30
            Retries: 3
            Timeout: 5
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: withvolumestatelessdefinitionrestateLogGroup9C462383
              awslogs-stream-prefix: restate
              awslogs-region: region
          Memory: 32768
          Name: restate
          PortMappings:
            - ContainerPort: 8080
              Name: ingress
              Protocol: tcp
            - ContainerPort: 9070
              Name: admin
              Protocol: tcp
            - ContainerPort: 5122
              Name: node
              Protocol: tcp
          StopTimeout: 120
      Cpu: '16384'
      ExecutionRoleArn:
        'Fn::GetAtt':
          - withvolumeexecutionrole3E3B4648
          - Arn
      Family: RestateBYOCwithvolumestatelessdefinition93235A6B
      Memory: '32768'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/stateless-definition
      TaskRoleArn:
        'Fn::GetAtt':
          - withvolumetaskrole261905B6
          - Arn
  withvolumestatelessdefinitionrestateLogGroup9C462383:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/stateless-definition
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  withvolumestatelessserviceServiceDCB5849A:
    Type: 'AWS::ECS::Service'
    Properties:
      CapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
      Cluster:
        Ref: withvolumecluster05BAFA05
      DeploymentConfiguration:
        Alarms:
          AlarmNames: []
          Enable: false
          Rollback: false
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DesiredCount: 3
      EnableECSManagedTags: false
      EnableExecuteCommand: false
      HealthCheckGracePeriodSeconds: 60
      LoadBalancers:
        - ContainerName: restate
          ContainerPort: 8080
          TargetGroupArn:
            Ref: withvolumeingresstargetA62E21B6
        - ContainerName: restate
          ContainerPort: 9070
          TargetGroupArn:
            Ref: withvolumeadmintarget0B4A76B1
        - ContainerName: restate
          ContainerPort: 5122
          TargetGroupArn:
            Ref: withvolumenodetargetA7E04507
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - 'Fn::GetAtt':
                - withvolumesecuritygroup6DBAA33E
                - GroupId
          Subnets:
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
      PropagateTags: SERVICE
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/stateless-service
      TaskDefinition:
        Ref: withvolumestatelessdefinition6EEBEF17
    DependsOn:
      - withvolumenlbadminlistenerCE9B4D30
      - withvolumenlbingresslistenerE8D58B65
      - withvolumenlbnodelistener3608123A
      - withvolumetaskroleDefaultPolicyCC3F2AA1
      - withvolumetaskrole261905B6
  withvolumenlb9E255615:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: 'false'
        - Key: load_balancing.cross_zone.enabled
          Value: 'false'
        - Key: dns_record.client_routing_policy
          Value: availability_zone_affinity
      Scheme: internal
      SecurityGroups:
        - 'Fn::GetAtt':
            - withvolumesecuritygroup6DBAA33E
            - GroupId
      Subnets:
        - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
        - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
        - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/nlb
      Type: network
  withvolumenlbingresslistenerE8D58B65:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: withvolumeingresstargetA62E21B6
          Type: forward
      LoadBalancerArn:
        Ref: withvolumenlb9E255615
      Port: 8080
      Protocol: TCP
  withvolumenlbadminlistenerCE9B4D30:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: withvolumeadmintarget0B4A76B1
          Type: forward
      LoadBalancerArn:
        Ref: withvolumenlb9E255615
      Port: 9070
      Protocol: TCP
  withvolumenlbnodelistener3608123A:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: withvolumenodetargetA7E04507
          Type: forward
      LoadBalancerArn:
        Ref: withvolumenlb9E255615
      Port: 5122
      Protocol: TCP
  withvolumeingresstargetA62E21B6:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /restate/health
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 2
      Port: 8080
      Protocol: TCP
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/ingress-target
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '10'
      TargetType: ip
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  withvolumeadmintarget0B4A76B1:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /health
      HealthCheckPort: '9070'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 2
      Port: 9070
      Protocol: TCP
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/admin-target
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '10'
      TargetType: ip
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  withvolumenodetargetA7E04507:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 5
      HealthCheckPath: /health
      HealthCheckPort: '5122'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 2
      Name: restate-bluegreen-node
      Port: 5122
      Protocol: TCP
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/node-target
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '10'
      TargetType: ip
      VpcId:
        'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcA2121C384D1B3CDE'
  withvolumestatefuldefinitionF7A5C84B:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Cpu: 16384
          Environment:
            - Name: RESTATE_LOG_FORMAT
              Value: json
            - Name: RESTATE_ROLES
              Value: '["log-server", "worker", "http-ingress"]'
            - Name: RESTATE_AUTO_PROVISION
              Value: 'false'
            - Name: RESTATE_SHUTDOWN_TIMEOUT
              Value: 100s
            - Name: RESTATE_ROCKSDB_TOTAL_MEMORY_SIZE
              Value: 24576MiB
            - Name: RESTATE_METADATA_CLIENT__TYPE
              Value: object-store
            - Name: RESTATE_METADATA_CLIENT__PATH
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: withvolumebucketE6C6250B
                    - /metadata
            - Name: RESTATE_WORKER__SNAPSHOTS__DESTINATION
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: withvolumebucketE6C6250B
                    - /snapshots
            - Name: RESTATE_WORKER__SNAPSHOTS__SNAPSHOT_INTERVAL_NUM_RECORDS
              Value: '1000000'
            - Name: RESTATE_WORKER__STORAGE__ROCKSDB_DISABLE_DIRECT_IO_FOR_READS
              Value: 'true'
            - Name: RESTATE_WORKER__STORAGE__ROCKSDB_DISABLE_WAL_FSYNC
              Value: 'true'
            - Name: RESTATE_LOG_SERVER__ROCKSDB_DISABLE_WAL_FSYNC
              Value: 'true'
            - Name: RESTATE_LOG_SERVER__ROCKSDB_DISABLE_DIRECT_IO_FOR_READS
              Value: 'true'
            - Name: >-
                RESTATE_INGRESS__EXPERIMENTAL_FEATURE_ENABLE_SEPARATE_INGRESS_ROLE
              Value: 'true'
          Essential: true
          HealthCheck:
            Command:
              - CMD
              - curl
              - '--fail'
              - 'http://127.0.0.1:5122/health'
            Interval: 30
            Retries: 3
            Timeout: 5
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: withvolumestatefuldefinitionrestateLogGroupD4893BD3
              awslogs-stream-prefix: restate
              awslogs-region: region
          Memory: 32768
          MountPoints:
            - ContainerPath: /restate-data
              ReadOnly: false
              SourceVolume: restate-data
          Name: restate
          PortMappings:
            - ContainerPort: 5122
              Name: node
              Protocol: tcp
          RestartPolicy:
            Enabled: true
            RestartAttemptPeriod: 60
          StopTimeout: 120
      Cpu: '16384'
      ExecutionRoleArn:
        'Fn::GetAtt':
          - withvolumeexecutionrole3E3B4648
          - Arn
      Family: RestateBYOCwithvolumestatefuldefinition4F5A9794
      Memory: '32768'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/stateful-definition
      TaskRoleArn:
        'Fn::GetAtt':
          - withvolumetaskrole261905B6
          - Arn
      Volumes:
        - ConfiguredAtLaunch: true
          Name: restate-data
  withvolumestatefuldefinitionrestateLogGroupD4893BD3:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/stateful-definition
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  withvolumecontrollerdefinitionTaskRoleE869D831:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/controller-definition
  withvolumecontrollerdefinitionTaskRoleDefaultPolicy4696F330:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ecs:ListTasks'
              - 'ecs:DescribeTasks'
              - 'ecs:StopTask'
            Condition:
              ArnEquals:
                'ecs:cluster':
                  'Fn::GetAtt':
                    - withvolumecluster05BAFA05
                    - Arn
            Effect: Allow
            Resource: '*'
            Sid: TaskActions
          - Action: 'ecs:RunTask'
            Condition:
              ArnEquals:
                'ecs:cluster':
                  'Fn::GetAtt':
                    - withvolumecluster05BAFA05
                    - Arn
              ArnLike:
                'ecs:task-definition':
                  'Fn::Join':
                    - ''
                    - - 'Fn::Join':
                          - ':'
                          - - 'Fn::Select':
                                - 0
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: withvolumestatefuldefinitionF7A5C84B
                            - 'Fn::Select':
                                - 1
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: withvolumestatefuldefinitionF7A5C84B
                            - 'Fn::Select':
                                - 2
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: withvolumestatefuldefinitionF7A5C84B
                            - 'Fn::Select':
                                - 3
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: withvolumestatefuldefinitionF7A5C84B
                            - 'Fn::Select':
                                - 4
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: withvolumestatefuldefinitionF7A5C84B
                            - 'Fn::Select':
                                - 5
                                - 'Fn::Split':
                                    - ':'
                                    - Ref: withvolumestatefuldefinitionF7A5C84B
                      - ':*'
            Effect: Allow
            Resource: '*'
            Sid: RunTask
          - Action: 'iam:PassRole'
            Condition:
              StringEquals:
                'iam:PassedToService': ecs-tasks.amazonaws.com
            Effect: Allow
            Resource:
              - 'Fn::GetAtt':
                  - withvolumetaskrole261905B6
                  - Arn
              - 'Fn::GetAtt':
                  - withvolumeexecutionrole3E3B4648
                  - Arn
            Sid: RunTaskPassRole
          - Action: 'iam:PassRole'
            Condition:
              StringEquals:
                'iam:PassedToService': ecs.amazonaws.com
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumevolumerole7B81BA6D
                - Arn
            Sid: RunTaskPassVolumeRole
          - Action:
              - 's3:GetObject'
              - 's3:PutObject'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'Fn::GetAtt':
                      - withvolumebucketE6C6250B
                      - Arn
                  - /*
            Sid: ReadWriteBucket
          - Action: 's3:ListBucket'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumebucketE6C6250B
                - Arn
            Sid: ListBucket
        Version: '2012-10-17'
      PolicyName: withvolumecontrollerdefinitionTaskRoleDefaultPolicy4696F330
      Roles:
        - Ref: withvolumecontrollerdefinitionTaskRoleE869D831
  withvolumecontrollerdefinitionD81EB134:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Cpu: 1024
          Environment:
            - Name: RUST_LOG
              Value: 'info,restate_fargate_controller=debug'
            - Name: CONTROLLER_LOG_FORMAT
              Value: json
            - Name: CONTROLLER_METADATA_PATH
              Value:
                'Fn::Join':
                  - ''
                  - - 's3://'
                    - Ref: withvolumebucketE6C6250B
                    - /metadata
            - Name: CONTROLLER_RECONCILE_INTERVAL
              Value: 10s
            - Name: CONTROLLER_CLUSTER__CLUSTER_ARN
              Value:
                'Fn::GetAtt':
                  - withvolumecluster05BAFA05
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __REGION
              Value:
                Ref: 'AWS::Region'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __CLUSTER_ARN
              Value:
                'Fn::GetAtt':
                  - withvolumecluster05BAFA05
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __TASK_PREFIX
              Value:
                'Fn::Join':
                  - /
                  - - 'Fn::Join':
                        - ':'
                        - - 'Fn::Select':
                              - 0
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - withvolumecluster05BAFA05
                                              - Arn
                          - 'Fn::Select':
                              - 1
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - withvolumecluster05BAFA05
                                              - Arn
                          - 'Fn::Select':
                              - 2
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - withvolumecluster05BAFA05
                                              - Arn
                          - 'Fn::Select':
                              - 3
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - withvolumecluster05BAFA05
                                              - Arn
                          - 'Fn::Select':
                              - 4
                              - 'Fn::Split':
                                  - ':'
                                  - 'Fn::Select':
                                      - 0
                                      - 'Fn::Split':
                                          - /
                                          - 'Fn::GetAtt':
                                              - withvolumecluster05BAFA05
                                              - Arn
                          - task
                    - 'Fn::Select':
                        - 1
                        - 'Fn::Split':
                            - /
                            - 'Fn::GetAtt':
                                - withvolumecluster05BAFA05
                                - Arn
                    - ''
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__VOLUME__SIZE_IN_GIB
              Value: '200'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__VOLUME__ROLE_ARN
              Value:
                'Fn::GetAtt':
                  - withvolumevolumerole7B81BA6D
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__VOLUME__VOLUME_TYPE
              Value: gp3
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__VOLUME__NAME
              Value: restate-data
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__ENABLE_EXECUTE_COMMAND
              Value: 'false'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__SECURITY_GROUPS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::GetAtt':
                        - withvolumesecuritygroup6DBAA33E
                        - GroupId
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__SUBNETS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::ImportValue': >-
                        VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1a__TASK_DEFINITION_ARN
              Value:
                Ref: withvolumestatefuldefinitionF7A5C84B
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__VOLUME__SIZE_IN_GIB
              Value: '200'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__VOLUME__ROLE_ARN
              Value:
                'Fn::GetAtt':
                  - withvolumevolumerole7B81BA6D
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__VOLUME__VOLUME_TYPE
              Value: gp3
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__VOLUME__NAME
              Value: restate-data
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__ENABLE_EXECUTE_COMMAND
              Value: 'false'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__SECURITY_GROUPS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::GetAtt':
                        - withvolumesecuritygroup6DBAA33E
                        - GroupId
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__SUBNETS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::ImportValue': >-
                        VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1b__TASK_DEFINITION_ARN
              Value:
                Ref: withvolumestatefuldefinitionF7A5C84B
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__VOLUME__SIZE_IN_GIB
              Value: '200'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__VOLUME__ROLE_ARN
              Value:
                'Fn::GetAtt':
                  - withvolumevolumerole7B81BA6D
                  - Arn
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__VOLUME__VOLUME_TYPE
              Value: gp3
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__VOLUME__NAME
              Value: restate-data
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__ENABLE_EXECUTE_COMMAND
              Value: 'false'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__SECURITY_GROUPS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::GetAtt':
                        - withvolumesecuritygroup6DBAA33E
                        - GroupId
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__SUBNETS
              Value:
                'Fn::Join':
                  - ''
                  - - '["'
                    - 'Fn::ImportValue': >-
                        VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491
                    - '"]'
            - Name:
                'Fn::Join':
                  - ''
                  - - CONTROLLER_ECS_CLUSTERS__
                    - Ref: 'AWS::Region'
                    - __ZONES__dummy1c__TASK_DEFINITION_ARN
              Value:
                Ref: withvolumestatefuldefinitionF7A5C84B
          Essential: true
          HealthCheck:
            Command:
              - CMD
              - curl
              - '--fail'
              - 'http://127.0.0.1:8080/health'
            Interval: 30
            Retries: 10
            StartPeriod: 300
            Timeout: 5
          Image: Any<Object>
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: withvolumecontrollerdefinitioncontrollerLogGroupF7CEE299
              awslogs-stream-prefix: controller
              awslogs-region: region
          Memory: 2048
          Name: controller
          StopTimeout: 120
      Cpu: '1024'
      ExecutionRoleArn:
        'Fn::GetAtt':
          - withvolumecontrollerdefinitionExecutionRoleFC6EEBC8
          - Arn
      Family: RestateBYOCwithvolumecontrollerdefinitionC10AEDF7
      Memory: '2048'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        CpuArchitecture: ARM64
        OperatingSystemFamily: LINUX
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/controller-definition
      TaskRoleArn:
        'Fn::GetAtt':
          - withvolumecontrollerdefinitionTaskRoleE869D831
          - Arn
  withvolumecontrollerdefinitioncontrollerLogGroupF7CEE299:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/controller-definition
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  withvolumecontrollerdefinitionExecutionRoleFC6EEBC8:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/controller-definition
  withvolumecontrollerdefinitionExecutionRoleDefaultPolicy51E639F4:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ecr:BatchCheckLayerAvailability'
              - 'ecr:GetDownloadUrlForLayer'
              - 'ecr:BatchGetImage'
            Effect: Allow
            Resource:
              'Fn::Join':
                - ''
                - - 'arn:'
                  - Ref: 'AWS::Partition'
                  - >-
                    :ecr:region:account-id:repository/cdk-hnb659fds-container-assets-account-id-region
          - Action: 'ecr:GetAuthorizationToken'
            Effect: Allow
            Resource: '*'
          - Action:
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumecontrollerdefinitioncontrollerLogGroupF7CEE299
                - Arn
        Version: '2012-10-17'
      PolicyName: withvolumecontrollerdefinitionExecutionRoleDefaultPolicy51E639F4
      Roles:
        - Ref: withvolumecontrollerdefinitionExecutionRoleFC6EEBC8
  withvolumevolumerole7B81BA6D:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs.amazonaws.com
        Version: '2012-10-17'
      Policies:
        - PolicyDocument:
            Statement:
              - Action: 'ec2:CreateVolume'
                Condition:
                  ArnLike:
                    'aws:RequestTag/AmazonECSCreated':
                      'Fn::Join':
                        - ''
                        - - 'arn:'
                          - Ref: 'AWS::Partition'
                          - ':ecs:'
                          - Ref: 'AWS::Region'
                          - ':'
                          - Ref: 'AWS::AccountId'
                          - ':task/*'
                  StringEquals:
                    'aws:RequestTag/AmazonECSManaged': 'true'
                Effect: Allow
                Resource:
                  'Fn::Join':
                    - ''
                    - - 'arn:'
                      - Ref: 'AWS::Partition'
                      - ':ec2:'
                      - Ref: 'AWS::Region'
                      - ':'
                      - Ref: 'AWS::AccountId'
                      - ':volume/*'
                Sid: CreateEBSManagedVolume
              - Action: 'ec2:CreateTags'
                Condition:
                  ArnLike:
                    'aws:RequestTag/AmazonECSCreated':
                      'Fn::Join':
                        - ''
                        - - 'arn:'
                          - Ref: 'AWS::Partition'
                          - ':ecs:'
                          - Ref: 'AWS::Region'
                          - ':'
                          - Ref: 'AWS::AccountId'
                          - ':task/*'
                  StringEquals:
                    'ec2:CreateAction': CreateVolume
                    'aws:RequestTag/AmazonECSManaged': 'true'
                Effect: Allow
                Resource:
                  'Fn::Join':
                    - ''
                    - - 'arn:'
                      - Ref: 'AWS::Partition'
                      - ':ec2:'
                      - Ref: 'AWS::Region'
                      - ':'
                      - Ref: 'AWS::AccountId'
                      - ':volume/*'
                Sid: TagOnCreateVolume
              - Action:
                  - 'ec2:DescribeVolumes'
                  - 'ec2:DescribeAvailabilityZones'
                Condition:
                  StringEquals:
                    'ec2:Region':
                      Ref: 'AWS::Region'
                Effect: Allow
                Resource: '*'
                Sid: DescribeVolumesForLifecycle
              - Action:
                  - 'ec2:AttachVolume'
                  - 'ec2:DetachVolume'
                Condition:
                  StringEquals:
                    'aws:ResourceTag/AmazonECSManaged': 'true'
                Effect: Allow
                Resource:
                  'Fn::Join':
                    - ''
                    - - 'arn:'
                      - Ref: 'AWS::Partition'
                      - ':ec2:'
                      - Ref: 'AWS::Region'
                      - ':'
                      - Ref: 'AWS::AccountId'
                      - ':volume/*'
                Sid: ManageEBSVolumeLifecycle
              - Action: 'ec2:DeleteVolume'
                Condition:
                  ArnLike:
                    'aws:ResourceTag/AmazonECSCreated':
                      'Fn::Join':
                        - ''
                        - - 'arn:'
                          - Ref: 'AWS::Partition'
                          - ':ecs:'
                          - Ref: 'AWS::Region'
                          - ':'
                          - Ref: 'AWS::AccountId'
                          - ':task/*'
                  StringEquals:
                    'aws:ResourceTag/AmazonECSManaged': 'true'
                Effect: Allow
                Resource:
                  'Fn::Join':
                    - ''
                    - - 'arn:'
                      - Ref: 'AWS::Partition'
                      - ':ec2:'
                      - Ref: 'AWS::Region'
                      - ':'
                      - Ref: 'AWS::AccountId'
                      - ':volume/*'
                Sid: DeleteEBSManagedVolume
            Version: '2012-10-17'
          PolicyName: volume
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/volume-role
  withvolumecontrollerserviceService047527E7:
    Type: 'AWS::ECS::Service'
    Properties:
      CapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1
      Cluster:
        Ref: withvolumecluster05BAFA05
      DeploymentConfiguration:
        Alarms:
          AlarmNames: []
          Enable: false
          Rollback: false
        MaximumPercent: 100
        MinimumHealthyPercent: 0
      DesiredCount: 1
      EnableECSManagedTags: false
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - 'Fn::GetAtt':
                - withvolumesecuritygroup6DBAA33E
                - GroupId
          Subnets:
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
            - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/controller-service
      TaskDefinition:
        Ref: withvolumecontrollerdefinitionD81EB134
    DependsOn:
      - withvolumecontrollerdefinitionTaskRoleDefaultPolicy4696F330
      - withvolumecontrollerdefinitionTaskRoleE869D831
  withvolumerestatectllambdaServiceRole10FA5C1D:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole'
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/restatectl-lambda
  withvolumerestatectllambdaE21E648A:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Environment:
        Variables:
          RESTATECTL_ADDRESS:
            'Fn::Join':
              - ''
              - - 'http://'
                - 'Fn::GetAtt':
                    - withvolumenlb9E255615
                    - DNSName
                - ':5122'
      Handler: restatectl
      Role:
        'Fn::GetAtt':
          - withvolumerestatectllambdaServiceRole10FA5C1D
          - Arn
      Runtime: provided.al2023
      Tags:
        - Key: Name
          Value: RestateBYOC/with-volume/restatectl-lambda
      Timeout: 10
      VpcConfig:
        SecurityGroupIds:
          - 'Fn::GetAtt':
              - withvolumesecuritygroup6DBAA33E
              - GroupId
        SubnetIds:
          - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet1Subnet934893E8236E2271'
          - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet2Subnet7031C2BA60DCB1EE'
          - 'Fn::ImportValue': 'VPCStack:ExportsOutputRefvpcPrivateSubnet3Subnet985AC459F9514491'
    DependsOn:
      - withvolumerestatectllambdaServiceRole10FA5C1D
  retirementwatcherlambdaServiceRoleE4E2E3CB:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - 'Fn::Join':
            - ''
            - - 'arn:'
              - Ref: 'AWS::Partition'
              - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-lambda
  retirementwatcherlambdaServiceRoleDefaultPolicyDB1E9C90:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ecs:DescribeClusters'
              - 'ecs:TagResource'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - withvolumecluster05BAFA05
                - Arn
            Sid: ClusterActions
          - Action:
              - 'sqs:ReceiveMessage'
              - 'sqs:ChangeMessageVisibility'
              - 'sqs:GetQueueUrl'
              - 'sqs:DeleteMessage'
              - 'sqs:GetQueueAttributes'
            Effect: Allow
            Resource:
              'Fn::GetAtt':
                - retirementwatcherqueueBAD18BB8
                - Arn
        Version: '2012-10-17'
      PolicyName: retirementwatcherlambdaServiceRoleDefaultPolicyDB1E9C90
      Roles:
        - Ref: retirementwatcherlambdaServiceRoleE4E2E3CB
  retirementwatcherlambda6732274F:
    Type: 'AWS::Lambda::Function'
    Properties:
      Architectures:
        - arm64
      Code: Any<Object>
      Environment:
        Variables:
          CLUSTER_ARN:
            'Fn::GetAtt':
              - withvolumecluster05BAFA05
              - Arn
          NODE_OPTIONS: '--experimental-strip-types'
      Handler: index.handler
      Role:
        'Fn::GetAtt':
          - retirementwatcherlambdaServiceRoleE4E2E3CB
          - Arn
      Runtime: nodejs22.x
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-lambda
      Timeout: 60
    DependsOn:
      - retirementwatcherlambdaServiceRoleDefaultPolicyDB1E9C90
      - retirementwatcherlambdaServiceRoleE4E2E3CB
  retirementwatcherlambdaSqsEventSourceRestateBYOCretirementwatcherqueueC0B122FB68CBA159:
    Type: 'AWS::Lambda::EventSourceMapping'
    Properties:
      BatchSize: 1
      EventSourceArn:
        'Fn::GetAtt':
          - retirementwatcherqueueBAD18BB8
          - Arn
      FunctionName:
        Ref: retirementwatcherlambda6732274F
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-lambda
  retirementwatcherqueueBAD18BB8:
    Type: 'AWS::SQS::Queue'
    Properties:
      Tags:
        - Key: Name
          Value: RestateBYOC/retirement-watcher-queue
      VisibilityTimeout: 60
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
  retirementwatcherqueuePolicy5522DE00:
    Type: 'AWS::SQS::QueuePolicy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'sqs:SendMessage'
              - 'sqs:GetQueueAttributes'
              - 'sqs:GetQueueUrl'
            Condition:
              ArnEquals:
                'aws:SourceArn':
                  'Fn::GetAtt':
                    - retirementwatcherrule0D8877EE
                    - Arn
            Effect: Allow
            Principal:
              Service: events.amazonaws.com
            Resource:
              'Fn::GetAtt':
                - retirementwatcherqueueBAD18BB8
                - Arn
        Version: '2012-10-17'
      Queues:
        - Ref: retirementwatcherqueueBAD18BB8
  retirementwatcherrule0D8877EE:
    Type: 'AWS::Events::Rule'
    Properties:
      EventPattern:
        detail:
          eventTypeCode:
            - equals-ignore-case: AWS_ECS_TASK_PATCHING_RETIREMENT
          service:
            - equals-ignore-case: ecs
        resources:
          - prefix:
              'Fn::Join':
                - /
                - - 'Fn::Join':
                      - ':'
                      - - 'Fn::Select':
                            - 0
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - withvolumecluster05BAFA05
                                            - Arn
                        - 'Fn::Select':
                            - 1
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - withvolumecluster05BAFA05
                                            - Arn
                        - 'Fn::Select':
                            - 2
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - withvolumecluster05BAFA05
                                            - Arn
                        - 'Fn::Select':
                            - 3
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - withvolumecluster05BAFA05
                                            - Arn
                        - 'Fn::Select':
                            - 4
                            - 'Fn::Split':
                                - ':'
                                - 'Fn::Select':
                                    - 0
                                    - 'Fn::Split':
                                        - /
                                        - 'Fn::GetAtt':
                                            - withvolumecluster05BAFA05
                                            - Arn
                        - task
                  - 'Fn::Select':
                      - 1
                      - 'Fn::Split':
                          - /
                          - 'Fn::GetAtt':
                              - withvolumecluster05BAFA05
                              - Arn
                  - ''
        detail-type:
          - equals-ignore-case: AWS Health Event
      State: ENABLED
      Targets:
        - Arn:
            'Fn::GetAtt':
              - retirementwatcherqueueBAD18BB8
              - Arn
          Id: Target0
"
`;
